# noxia-dashboard

./: .env.example  .gitignore  Install_Setup.iss  README.md  api_client.py  app.py  config.py  inventaire_noxia.csv  main.py  pyproject.toml  test.py
config/: logger.py  settings.py
services/: api_client.py  diagnostic.py  monitoring.py
tests/: test.py
ui/: app.py  setup_frame.py  tab_list.py  tab_supervision.py
ui/supervision/: info_sidebar.py  map_view.py
