[project]
name = "noxia-security-gui"
version = "0.1.0"
description = "GUI for monitoring with CTk"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "customtkinter>=5.2.2",
    "imageio>=2.37.3",
    "keyring>=25.7.0",
    "nuitka>=4.0.8",
    "pillow>=12.2.0",
    "pyarmor>=9.2.4",
    "pydantic-settings>=2.14.0",
    "pytest>=9.0.3",
    "requests>=2.33.1",
    "tkintermapview>=1.29",
    "zstandard>=0.25.0",
]

[tool.pytest.ini_options]
pythonpath = [
  "."
]

[dependency-groups]
dev = [
    "pyinstaller>=6.20.0",
]
